@@ -36,18 +36,14 @@ MAKE_PERF := $(MAKE) prefix=/usr perfexecdir=share/perf_$(VERSION)-core NO_GTK2=
 all:
 ifdef KERNEL_ARCH_PERF
 	-mkdir out
-	# upstream makefile is broken
-	cp -al $(top_srcdir)/tools/perf/Documentation doc
-	cp -al $(top_srcdir)/tools/perf/config config
 	+$(MAKE_PERF) -C $(top_srcdir)/tools/perf O=$(CURDIR)/out all VERSION=$(VERSION)
-	+$(MAKE_PERF) -C doc man VERSION=$(VERSION)
+	+$(MAKE_PERF) -C $(top_srcdir)/tools/perf/Documentation O=$(CURDIR)/out man VERSION=$(VERSION)
 endif
 
 install:
 ifdef KERNEL_ARCH_PERF
 	+$(MAKE_PERF) -C $(top_srcdir)/tools/perf O=$(CURDIR)/out install VERSION=$(VERSION)
-	+$(MAKE_PERF) -C doc install-man VERSION=$(VERSION)
 endif
 
 clean:
-	rm -rf config doc out
+	rm -rf out
