@@ -2,6 +2,10 @@ linux-tools (3.11~rc4-1~exp1) UNRELEASED; urgency=low
 
   * New upstream release candidate
 
+  [ Ben Hutchings ]
+  * linux-tools: Build perf documentation out-of-tree, as this now works
+    and our previous workaround does not
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 08 Aug 2013 15:39:50 +0200
 
 linux-tools (3.10-2) unstable; urgency=low
